# demucs-mlx

./: Makefile  README.md  pyproject.toml  requirements.txt  separate.py
demucs_mlx/: __main__.py  cli.py  pretrained.py
