[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demucs-mlx"
version = "0.1.0"
description = "Music source separation with HTDemucs on Apple Silicon (MLX)"
readme = "README.md"
license = {text = "MIT"}
# Upper bound: librosa → numba → llvmlite lag new CPython releases
# (no numba wheels for 3.14 yet). Relax the bound when numba supports it.
requires-python = ">=3.10,<3.14"
dependencies = [
    "mlx>=0.17",
    # Capped because librosa→numba pins numpy<2.3; without this, uv backtracks
    # numba to an ancient version that fails to build. Relax when numba catches up.
    "numpy<2.3",
    "torch",
    "soundfile",
    "pyyaml",
    "tqdm",
    "librosa",
]

[project.scripts]
demucs-mlx = "demucs_mlx.cli:main"

[project.urls]
Repository = "https://github.com/andrade0/demucs-mlx"

[tool.setuptools.packages.find]
include = ["demucs_mlx*"]

[tool.setuptools.package-data]
demucs_mlx = ["remote/*.txt", "remote/*.yaml"]
