[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demucs-mlx"
version = "0.1.0"
description = "Music source separation with HTDemucs on Apple Silicon (MLX)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.17",
    "numpy",
    "torch",
    "soundfile",
    "pyyaml",
    "tqdm",
]

[project.optional-dependencies]
# numpy<2.3: librosa pulls in numba, which in current releases requires
# numpy<2.3. Without the cap, a resolver can select a numpy too new for numba.
resample = ["librosa", "numpy<2.3"]

[project.scripts]
demucs-mlx = "separate:main"

[project.urls]
Repository = "https://github.com/andrade0/demucs-mlx"

[tool.setuptools.packages.find]
include = ["demucs_mlx*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.yaml"]
